@@ -95,25 +95,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_create" eval="True"/>
             <field name="perm_delete" eval="True"/>
         </record>
-        <record model="ir.sequence.type" id="sequence_type_account_journal">
-            <field name="name">Account Journal</field>
-        </record>
-        <record model="ir.sequence.type-res.group"
-            id="sequence_type_account_journal_group_admin">
-            <field name="sequence_type" ref="sequence_type_account_journal"/>
-            <field name="group" ref="res.group_admin"/>
-        </record>
-        <record model="ir.sequence.type-res.group"
-            id="sequence_type_account_journal_group_account_admin">
-            <field name="sequence_type" ref="sequence_type_account_journal"/>
-            <field name="group" ref="group_account_admin"/>
-        </record>
-
-        <record model="ir.sequence" id="sequence_account_journal">
-            <field name="name">Default Account Journal</field>
-            <field name="sequence_type" ref="sequence_type_account_journal"/>
-            <field name="company" eval="None"/>
-        </record>
 
         <record model="ir.ui.view" id="journal_period_view_form">
             <field name="model">account.journal.period</field>
