@@ -4,16 +4,15 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="name"/>
     <field name="name"/>
-    <label name="active"/>
-    <field name="active" xexpand="0" width="100"/>
-
     <label name="code"/>
-    <field name="code"/>
-    <label name="matching_sequence"/>
-    <field name="matching_sequence"/>
+    <group col="-1" id="code_active">
+        <field name="code"/>
+        <label name="active"/>
+        <field name="active" xexpand="0" width="25"/>
+    </group>
 
     <label name="type"/>
     <field name="type"/>
-    <label name="sequence"/>
-    <field name="sequence"/>
+    <label name="matching_sequence"/>
+    <field name="matching_sequence"/>
 </form>
