@@ -4,7 +4,6 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="company" optional="1"/>
     <field name="number" optional="0"/>
-    <field name="post_number" optional="1"/>
     <field name="journal" optional="0"/>
     <field name="period" optional="1"/>
     <field name="date"/>
