@@ -1,3 +1,5 @@
+* Rename post number to number
+* Remove number on move and its sequence on journal
 
 Version 7.4.0 - 2024-11-04
 --------------------------
